@@ -7,6 +7,8 @@ Revision history for DBIx::Class
         - sqltargs respected correctly in deploy et al.
         - Added support for savepoints, and using them automatically in
           nested transactions if auto_savepoint is set in connect_info.
+        - Changed naming scheme for constraints and keys in the sqlt parser;
+          names should now be consistent and collision-free.
 
 0.08010 2008-03-01 10:30
         - Fix t/94versioning.t so it passes with latest SQL::Translator
